Added a Firebase recyclerView Adapter

--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -5,11 +5,10 @@
     android:padding="10dp"
     tools:context="ness.tomerbu.edu.firepractice.UserListFragment">
 
-    <TextView
-        android:id="@+id/title"
-        android:text="Hello"
-        android:fontFamily="cursive"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        tools:listitem="@layout/todo_list_item"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
          />
