--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-    tools:context="ness.tomerbu.edu.firepractice.UserListFragment">
+    tools:context=".fragments.UserListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
